# name: test_info
  '
  {"bullets": [{"kind": "add", "body": "Add some new feature.", "tags": ["123", "!5"]}, {"kind": "rm", "body": "Remove some old feature.", "tags": ["!6", "bc"]}]}
  
  '
---
# name: test_kind[bullets0-args0]
  '
  * add(123,!5): Added some feature.
  
  '
---
# name: test_kind[bullets1-args1]
  '
  * add(123,!5): Added some feature.
  * fix: Fixed some bug.
  
  '
---
# name: test_kind[bullets2-args2]
  '
  * add(123,!5): Added some feature.
  * fix: Fixed some bug.
  * rm(bc): Removed some important feature.
  
  '
---
